Minior fix